[package]
name = "lvenc-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
opencv = "0.62"
thiserror = "1.0"
serde = {version="1.0", features=["derive"]}
bincode = "1.3.3"
bytes = "1.1.0"
bitvec = "0.22.3"

[dependencies.lvenc]
path = "lvenc"