[package]
name = "lvenc-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
     "lvenc"
]

[dependencies]
opencv = "0.63"
image = "0.24"
thiserror = "1.0"
anyhow = "1.0.55"
array2d = "0.2.1"
bitvec = "1.0"
serde = {version="1.0", features=["derive"]}
shrinkwraprs = "0.3.0"
stati = "0.11.0-beta"
bincode = "1.3"
bytes = "1.1.0"

[dependencies.lvenc]
path = "lvenc"

[profile.dev]
opt-level = 1

[profile.release]
# debug = true
strip = true
lto = true
