[package]
name = "lvenc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
thiserror = "1.0"
bitvec = "1.0.0"
serde = {version="1.0", features=["derive"]}
shrinkwraprs = "0.3.0"
# most-squares = { path = "../../most-squares"}